# pdf2dcm

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: license-update.yml  release.yml  test.yml
pdf2dcm/: __init__.py  base.py  pdf2encaps.py  pdf2rgb.py
