[tool.poetry]
name = "pdf2dcm"
version = "0.5.2"
description = "A PDF to Dicom Converter"
authors = ["Abhijeet Parida <abhijeet.parida@tum.de>"]
license = "MIT"
repository = 'https://github.com/a-parida12/pdf2dcm'
homepage = "https://a-parida12.github.io/pdf2dcm/"
readme = 'README.md'
keywords = ["dicom", "pdf", "pdf2dcm",  "pdf2dicom", "pydicom", "pdf2dicomRGB"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydicom = "3.0.2"
pillow = "12.2.0"
pdf2image = "1.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
flake8 = "7.3.0"
commitizen = "4.16.2"
bandit = "1.9.4"
pre-commit = "4.6.0"
pytest-cov = "7.1.0"
pdoc = "16.0.0"
pyyaml = "6.0.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pdf2dcm/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
